@@ -347,13 +347,13 @@ GTKMM GUI
 				-----------------------
 				[ ]  GXemul instance
 			[/]  Open
-				(Open can show a list of "thumbnails"
-				of the workspace plus e.g. one main
-				window (such as a VGA display).)
+				[ ]  (Open can show a list of "thumbnails"
+					of the workspace plus e.g. one main
+					window (such as a VGA display).)
 			[ ]  Close
 			-----------
-			[ ]  Save
-			[ ]  Save as...
+			[X]  Save
+			[X]  Save as...
 			-----------
 			[ ]  list of recently used files
 			-----------
